# AI-AimBot

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  README.md
aimbot/: CMakeLists.txt  main.cpp
script/: build.bat
